Title spacing corrections

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -122,7 +122,7 @@ main {
 
 .texthighlight {
     color: var(--ss-connectBlue);
-    text-indent: 1rem;
+    text-indent: .8rem;
 }
 
 .heroTitle {
@@ -246,7 +246,7 @@ main {
 
 @media (max-width: 480px) {
     .heroTitle {
-        font-size: 2.1rem;
+        font-size: 2.15rem;
         display: flex;
         justify-content: start;
     }
